Fixed alignment issues & made color changes
Fixed the vertical centering of the nav bar buttons, fixed the vertical and left-alignment of "Blackbeard's" on the medium and large screens, fixed width/margins for the banner text on the home page, changed some color choices on the about page, and experimented with fixing the left/middle/right balance on the About page.

--- a/Week07.midterm/layout.css
+++ b/Week07.midterm/layout.css
@@ -50,7 +50,7 @@ body {
 
 .navbar ul {
     list-style-type: none;
-    padding: 2px;
+    padding: 0 2px;
     margin: 0;
     text-align: center;
 }
@@ -177,7 +177,7 @@ footer {
     .navbar li {
         display: inline-block;
         padding: 2px 10px;
-        margin: 10px 5px;
+        margin: 0px 5px;
         border-bottom: none;
         background-color: rgb(75, 75, 75);
     }
