--- a/Week07.midterm/style.css
+++ b/Week07.midterm/style.css
@@ -16,10 +16,16 @@ header {
     position: relative;
 }
 
+.home-banner {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
 .absolute-translate {
     position: absolute;
     top: 50%;
-    left: 45%;
+    left: 50%;
     transform: translate(-50%, -50%);
 }
 
@@ -102,7 +108,7 @@ h6 {
     text-align: left;
     font-size: 28px;
     color: white;
-    margin: 15% 0 0 35px;
+    margin: 0 0 0 0;
     text-shadow: 0px 2px 3px black;
     font-weight: normal;
     letter-spacing: 0.05em;
@@ -218,6 +224,12 @@ header a {
     display: none;
 }
 
+.large-show .content-content h1 {
+    color: white;
+    background-color: rgba(255, 50, 50, 0.5);
+    padding: 15px 25px;
+}
+
 .shop-content {
     margin-bottom: 15px;
 }
@@ -252,8 +264,19 @@ header a {
     }
 
     .large-show {
-        margin: 25px 0 -25px 0;
+        margin: 25px 0 0 0;
         display: inline-block;
+        width: 100%;
+    }
+
+    h6 {
+        margin: 0 0 0 67px;
+    }
+
+    .nav-flex {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 }
 
@@ -262,6 +285,10 @@ header a {
 
     header img {
         max-width: 20%;
+    }
+
+    h6 {
+        margin: 0 0 0 -2px;
     }
 
 }
